--- a/Statistika_mean.ipynb
+++ b/Statistika_mean.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Statistika mean.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPYuAg+O383dDanosJKGd1h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +36,7 @@
         "import pandas as pd\n",
         "import math as mt"
       ],
-      "execution_count": 1,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -56,41 +55,54 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DDPSHawkHrMN",
-        "outputId": "819f05ce-6f34-4112-e2a3-9064d7ddc84a"
+        "outputId": "0d8a090f-52e9-4e2b-c38f-2c34c7883267"
       },
       "source": [
         "nilaitengah = np.array([1749999.5, 2649999.5, 3549999.5 , 4449999.5 , 5349999.5 , 6249999.5 , 7149999.5 , 8049999.5 ])\n",
         "frekuensi = np.array([26,41,15,8,4,1,0,3])\n",
         " \n",
-        "def jumlahFrekuensi(frekuensi):\n",
-        "    a = 0\n",
-        "    b = frekuensi \n",
-        "    jumlahFrekuensi = len(b) \n",
+        "\n",
+        "b=nilaitengah #nilaitengah\n",
+        "d=frekuensi #frekuensi\n",
+        "ftgh=0 #nilai tengak dikali frekuensi\n",
+        "fk=0 #jumlah frekuensi\n",
+        "sigma=0 #jumlah frekuensi dikali nilai tengah dikurangi rata-rata kuadrat\n",
+        "\n",
+        "jumlahFrekuensi = len(b) \n",
         " \n",
-        "    for i in range(jumlahFrekuensi): \n",
-        "        c = b[i] \n",
-        "        a+=c\n",
-        "    return a \n",
-        " \n",
-        "print(\"Jumlah frekuensi adalah :\",jumlahFrekuensi(frekuensi)) \n",
-        " \n",
-        "def jumlahnilai(nilaitengah,frekuensi): \n",
-        "    hasil = nilaitengah * frekuensi \n",
-        "    total = sum(hasil)\n",
-        "    return total     \n",
-        "print(\"Total dari Nilai Tengah kali Frekuensi adalah:\", jumlahnilai(nilaitengah,frekuensi)) \n",
-        " \n",
-        "ratarata = jumlahnilai(nilaitengah, frekuensi) / jumlahFrekuensi(frekuensi)\n",
-        "print (\"Jadi Rata-ratanya adalah\", ratarata)"
+        "for i in range(jumlahFrekuensi): \n",
+        "  ftgh = ftgh+b[i]*d[i]\n",
+        "  fk= fk+d[i]\n",
+        "    \n",
+        "print('jumlah nilai tengak dikali frekuensi :',ftgh)\n",
+        "print('jumlah frekuensi',fk)\n",
+        "\n",
+        "rata2=ftgh/fk\n",
+        "print(\"Jadi Rata-ratanya adalah\",rata2)\n",
+        "\n",
+        "#simpangan rata-rata\n",
+        "for i in range(jumlahFrekuensi): \n",
+        "  sigma = sigma+np.absolute(b[i]-rata2)*d[i]\n",
+        "  sr=(sigma/fk)\n",
+        "print('nilai simpangan rata-rata',sr)\n",
+        "\n",
+        "#simpangan baku\n",
+        "\n",
+        "for i in range(jumlahFrekuensi): \n",
+        "  sigma = sigma+(b[i]-rata2)**2*d[i]\n",
+        "  sb=mt.sqrt(sigma/fk)\n",
+        "print('nilai simpangan baku',sb)"
       ],
-      "execution_count": 2,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Jumlah frekuensi adalah : 98\n",
-            "Total dari Nilai Tengah kali Frekuensi adalah: 294799951.0\n",
-            "Jadi Rata-ratanya adalah 3008162.7653061226\n"
+            "jumlah nilai tengak dikali frekuensi : 294799951.0\n",
+            "jumlah frekuensi 98\n",
+            "Jadi Rata-ratanya adalah 3008162.7653061226\n",
+            "nilai simpangan rata-rata 967284.4648063307\n",
+            "nilai simpangan baku 1340722.3311336068\n"
           ],
           "name": "stdout"
         }
